--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.softwareapp.group9.doctorpatientapp">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -9,18 +10,22 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:screenOrientation="portrait"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:screenOrientation="portrait">
-        <activity android:name=".userprofile.LaunchScreen" android:theme="@style/StandardTheme">
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".userprofile.LaunchScreen"
+            android:theme="@style/StandardTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-       <!--  <activity android:name=".registration.RegistrationActivity" android:theme="@style/StandardTheme" />
-        <activity android:name=".userprofile.PatientProfileActivity"/> -->
+        <!--
+        <activity android:name=".registration.RegistrationActivity" android:theme="@style/StandardTheme" />
+        <activity android:name=".userprofile.PatientProfileActivity"/>
+        -->
         <activity
             android:name=".userprofile.ChoiceRegister"
             android:parentActivityName=".userprofile.LaunchScreen" />
@@ -30,13 +35,18 @@
         <activity
             android:name=".userprofile.PatientLogin"
             android:parentActivityName=".userprofile.ChoiceRegister" />
-        <activity android:name=".userprofile.PatientDetails"/>
-        <activity android:name=".userprofile.DoctorProfileActivity" android:theme="@style/StandardTheme" />
+        <activity android:name=".userprofile.PatientDetails" />
+        <activity
+            android:name=".userprofile.DoctorProfileActivity"
+            android:theme="@style/StandardTheme" />
         <activity android:name=".medicalcondition.ViewMedicalConditionActivity" />
         <activity android:name=".consultdoctor.ConsultDoctorActivity" />
         <activity android:name=".facilitiesnearme.FacilitiesNearMeActivity" />
-        <activity android:name=".doctorfeedback.DoctorFeedbackActivity"/>
+        <activity android:name=".doctorfeedback.DoctorFeedbackActivity" />
         <activity android:name=".userprofile.PatientProfileActivity" />
+        <activity android:name=".DoctorRegister"
+            android:parentActivityName=".userprofile.ChoiceRegister"
+            ></activity>
     </application>
 
 </manifest>
