--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".userprofile.LaunchScreen"
+            android:screenOrientation="portrait"
             android:theme="@style/StandardTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,25 +28,29 @@
         -->
         <activity
             android:name=".userprofile.ChoiceRegister"
-            android:parentActivityName=".userprofile.LaunchScreen" />
+            android:parentActivityName=".userprofile.LaunchScreen"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".userprofile.PatientRegister"
-            android:parentActivityName=".userprofile.ChoiceRegister" />
+            android:parentActivityName=".userprofile.ChoiceRegister"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".userprofile.PatientLogin"
-            android:parentActivityName=".userprofile.ChoiceRegister" />
-        <activity android:name=".userprofile.PatientDetails" />
+            android:parentActivityName=".userprofile.ChoiceRegister"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".userprofile.PatientDetails"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".userprofile.DoctorProfileActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/StandardTheme" />
-        <activity android:name=".medicalcondition.ViewMedicalConditionActivity" />
-        <activity android:name=".consultdoctor.ConsultDoctorActivity" />
-        <activity android:name=".facilitiesnearme.FacilitiesNearMeActivity" />
-        <activity android:name=".doctorfeedback.DoctorFeedbackActivity" />
-        <activity android:name=".userprofile.PatientProfileActivity" />
+        <activity android:name=".medicalcondition.ViewMedicalConditionActivity" android:screenOrientation="portrait" />
+        <activity android:name=".consultdoctor.ConsultDoctorActivity" android:screenOrientation="portrait" />
+        <activity android:name=".facilitiesnearme.FacilitiesNearMeActivity" android:screenOrientation="portrait" />
+        <activity android:name=".doctorfeedback.DoctorFeedbackActivity" android:screenOrientation="portrait" />
+        <activity android:name=".userprofile.PatientProfileActivity" android:screenOrientation="portrait" />
         <activity android:name=".DoctorRegister"
-            android:parentActivityName=".userprofile.ChoiceRegister"
-            ></activity>
+            android:parentActivityName=".userprofile.ChoiceRegister" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
