--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,15 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
 
         //choose image from memory
         ndk {
             abiFilters "armeabi", "armeabi-v7a", "x86", "mips"
+        }
+
+        packagingOptions {
+            exclude 'com/google/api/AuthPhoto'
         }
 
     }
@@ -34,6 +39,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.4'
     implementation 'com.google.firebase:firebase-database:16.0.3'
     implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.android.support:cardview-v7:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
