--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.softwareapp.group9.doctorpatientapp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,28 +12,48 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".userprofile.LaunchScreen" android:theme="@style/StandardTheme">
+        <activity
+            android:name=".userprofile.LaunchScreen"
+            android:theme="@style/StandardTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".userprofile.ChoiceRegister"
-            android:parentActivityName=".userprofile.LaunchScreen"/>
-        <activity android:name=".userprofile.PatientRegister"
-            android:parentActivityName=".userprofile.ChoiceRegister"/>
-        <activity android:name=".userprofile.PatientLogin"
-            android:parentActivityName=".userprofile.ChoiceRegister"/>
-        <activity android:name=".userprofile.PatientDetails"/>
-        <activity android:name=".registration.RegistrationActivity" android:theme="@style/StandardTheme" />
-        <activity android:name=".userprofile.PatientProfileActivity"/>
-        <activity android:name=".userprofile.DoctorProfileActivity" android:theme="@style/StandardTheme" />
+        <activity
+            android:name=".userprofile.ChoiceRegister"
+            android:parentActivityName=".userprofile.LaunchScreen"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".userprofile.PatientRegister"
+            android:parentActivityName=".userprofile.ChoiceRegister"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".userprofile.PatientLogin"
+            android:parentActivityName=".userprofile.ChoiceRegister"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".userprofile.PatientDetails"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".registration.RegistrationActivity"
+            android:theme="@style/StandardTheme"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".userprofile.PatientProfileActivity" android:screenOrientation="portrait" />
+        <activity android:name=".DoctorRegister" android:screenOrientation="portrait"/>
+        <activity android:name=".DoctorDetails" android:screenOrientation="portrait"/>
+        <activity android:name=".DoctorLogin" android:screenOrientation="portrait" />
+        <activity
+            android:name=".userprofile.DoctorProfileActivity"
+            android:theme="@style/StandardTheme"
+            android:screenOrientation="portrait"/>
         <activity android:name=".medicalcondition.ViewMedicalConditionActivity" />
-        <activity android:name=".consultdoctor.ConsultDoctorActivity" />
-        <activity android:name=".consultdoctor.UploadActivity"></activity>
-        <activity android:name=".facilitiesnearme.FacilitiesNearMeActivity" />
-        <activity android:name=".doctorfeedback.DoctorFeedbackActivity"></activity>
+        <activity android:name=".consultdoctor.ConsultDoctorActivity" android:screenOrientation="portrait" />
+        <activity android:name=".consultdoctor.UploadActivity" android:screenOrientation="portrait" />
+        <activity android:name=".facilitiesnearme.FacilitiesNearMeActivity" android:screenOrientation="portrait" />
+        <activity android:name=".doctorfeedback.DoctorFeedbackActivity" android:screenOrientation="portrait" />
+        <activity android:name=".consultdoctor.ChooseDoctorActivity" android:screenOrientation="portrait" android:theme="@style/StandardTheme"/>
     </application>
 
 </manifest>
