--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -44,6 +45,7 @@
         <activity android:name=".DoctorRegister" android:screenOrientation="portrait"/>
         <activity android:name=".DoctorDetails" android:screenOrientation="portrait"/>
         <activity android:name=".DoctorLogin" android:screenOrientation="portrait" />
+        <activity android:name=".consultdoctor.HeartRate" android:screenOrientation="portrait" />
         <activity
             android:name=".userprofile.DoctorProfileActivity"
             android:theme="@style/StandardTheme"
