--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,7 +66,7 @@
         <activity android:name=".consultdoctor.HeartRate" android:screenOrientation="portrait" />
         <activity
             android:name=".userprofile.DoctorProfileActivity"
-            android:theme="@style/StandardTheme"
+            android:theme="@style/AppTheme"
             android:screenOrientation="portrait"/>
         <activity android:name=".medicalcondition.ViewMedicalConditionActivity" android:screenOrientation="portrait" />
         <activity android:name=".consultdoctor.ConsultDoctorActivity" android:screenOrientation="portrait" />
