--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -77,6 +77,7 @@
         <activity android:name=".consultdoctor.UploadVideoActivity" android:screenOrientation="portrait" android:theme="@style/StandardTheme"/>
         <activity android:name=".medicalcondition.AddMedicalConditionActivity" android:theme="@style/StandardTheme" android:screenOrientation="portrait"/>
         <activity android:name=".doctorviewpatient.DoctorViewPatients" android:screenOrientation="portrait"/>
+        <activity android:name=".doctorviewpatient.ViewPatientDataPacketActivity" android:screenOrientation="portrait"/>
         <activity android:name=".recommendationshistory.RecommendationsHistory" android:screenOrientation="portrait"/>
     </application>
 
